--- a/Cashify.Infrastructure/Cashify.Infrastructure.csproj
+++ b/Cashify.Infrastructure/Cashify.Infrastructure.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Blazor-ApexCharts" Version="5.0.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
       <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
