--- a/Cashify/Cashify.csproj
+++ b/Cashify/Cashify.csproj
@@ -78,6 +78,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Blazor-ApexCharts" Version="5.0.1" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
